????-??-?? Technology Preview 2
-------------------------------
* Previews scaling is now logarithmic (slower when zoomed).

2012-04-20 Technology Preview 1
-------------------------------
* First preview version.